src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of the student</description>
        <inlineHelpText>Address of the student</inlineHelpText>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of the Student</description>
        <formula>TODAY()  - Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the Student</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <label>Blood Group</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Class/Standard in which student currently belongs</description>
        <inlineHelpText>Class/Standard in which student currently belongs</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of birth for student</description>
        <inlineHelpText>Date of birth for student</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division in which the student currently belongs to</description>
        <inlineHelpText>Division in which the student currently belongs to</inlineHelpText>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_Number__c</fullName>
        <description>Enrollment Number = ID Card Number</description>
        <formula>ID_Card_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enrollment Number = ID Card Number</inlineHelpText>
        <label>Enrollment Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gaurdian__c</fullName>
        <description>Guardian that is associated with the student</description>
        <inlineHelpText>Guardian that is associated with the student</inlineHelpText>
        <label>Gaurdian</label>
        <referenceTo>Guradian__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Defines gender of the guardian</description>
        <inlineHelpText>Defines gender of the guardian</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trans Gender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t want to disclose</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Card_Number__c</fullName>
        <description>ID Card Number will be generated automatically on first time enrollment of the student</description>
        <displayFormat>STU-{000000}</displayFormat>
        <inlineHelpText>ID Card Number will be generated automatically on first time enrollment of the student</inlineHelpText>
        <label>ID Card Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile of the student</description>
        <inlineHelpText>Mobile of the Student</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone of the student</description>
        <inlineHelpText>Phone of the student</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Present_Absent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present/Absent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Card_Number__c</fullName>
        <description>Report Card Number of the student that will be entered manually</description>
        <inlineHelpText>Report Card Number of the student that will be entered manually</inlineHelpText>
        <label>Report Card Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>Email of the student</description>
        <inlineHelpText>Email of the student</inlineHelpText>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>